manifests/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-image-registry
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
spec:
  finalizers:
  - kubernetes
