manifests/01-openshift-config-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ""
  name: openshift-config-managed
  labels:
    openshift.io/run-level: "0"
spec:
  finalizers:
  - kubernetes
