manifests/07-operator-ibm-cloud-managed.yaml
# *** AUTOMATICALLY GENERATED FILE - DO NOT EDIT ***
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    capability.openshift.io/name: ImageRegistry
    config.openshift.io/inject-proxy: cluster-image-registry-operator
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
  name: cluster-image-registry-operator
  namespace: openshift-image-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cluster-image-registry-operator
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
      labels:
        name: cluster-image-registry-operator
    spec:
      containers:
      - args:
        - --files=/var/run/configmaps/trusted-ca/tls-ca-bundle.pem
        - --files=/etc/secrets/tls.crt
        - --files=/etc/secrets/tls.key
        image: docker.io/openshift/origin-cluster-image-registry-operator:latest
        imagePullPolicy: IfNotPresent
        name: cluster-image-registry-operator
        ports:
        - containerPort: 60000
          name: metrics
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /var/run/configmaps/trusted-ca/
          name: trusted-ca
        - mountPath: /etc/secrets
          name: image-registry-operator-tls
        - mountPath: /var/run/secrets/openshift/serviceaccount
          name: bound-sa-token
          readOnly: true
      priorityClassName: system-cluster-critical
      serviceAccountName: cluster-image-registry-operator
      shareProcessNamespace: false
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 120
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 120
      volumes:
      - name: image-registry-operator-tls
        secret:
          secretName: image-registry-operator-tls
      - configMap:
          items:
          - key: ca-bundle.crt
            path: tls-ca-bundle.pem
          name: trusted-ca
          optional: true
        name: trusted-ca
      - name: bound-sa-token
        projected:
          sources:
          - serviceAccountToken:
              audience: openshift
              path: token
