manifests/07-operator-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    service.alpha.openshift.io/serving-cert-secret-name: image-registry-operator-tls
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: Registry
  labels:
    name: image-registry-operator
  name: image-registry-operator
  namespace: openshift-image-registry
spec:
  clusterIP: None
  ports:
  - port: 60000
    protocol: TCP
    targetPort: 60000
  selector:
    name: cluster-image-registry-operator
