manifests/08-default-deny-all-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: openshift-image-registry
  annotations:
    capability.openshift.io/name: ImageRegistry
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
